# projeto_petshop

./: .gitignore  README.md
backend/: .env.example  main.py  pyproject.toml  pytest.ini  readme_testes.md
backend/app/api/: atendimentos.py  auth.py  cadastro.py  clientes.py  contatos.py  deps.py  enderecos.py  pets.py  racas.py  usuarios.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: models.py
backend/app/schemas/: atendimento.py  cadastro.py  cliente.py  contato.py  endereco.py  pet.py  raca.py  usuario.py
backend/app/services/: atendimento_service.py  cliente_service.py  contato_service.py  endereco_service.py  pet_service.py  raca_service.py  usuario_service.py
backend/scripts/: create_user.py  seed_racas.py
backend/tests/: README.md  __init__.py  conftest.py  test_atendimentos.py  test_auth.py  test_basic.py  test_cadastro.py  test_pets.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue
frontend/src/components/: ConfirmationContainer.vue  ConfirmationModal.vue  ErrorMessage.vue  ErrorMessageContainer.vue  SuccessMessage.vue  SuccessMessageContainer.vue
frontend/src/composables/: useCharacterOnlyFormatter.js  useConfirmationMessage.js  useCpfFormatter.js  useCurrencyFormatter.js  useErrorMessage.js  usePhoneFormatter.js  useSuccessMessage.js
frontend/src/router/: index.js
frontend/src/services/: api.js
frontend/src/stores/: auth.js
frontend/src/views/: CadastroView.vue  DashboardView.vue  HomeView.vue  LoginView.vue
frontend/src/views/admin/: AdminLayout.vue
(+13 files in other folders)
